--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 backend/environment.json
 frontend/src/assets/iptable.json
-backend/public
+backend/public/*
 backend/node_modules
 frontend/node_modules
+backend/package.json
