Revert "host changed"
This reverts commit 366a08eabef3e939ba955e211b269389a40f1469.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 backend/environment.json
 frontend/src/assets/iptable.json
-backend/public/*
+backend/public
 backend/node_modules
 frontend/node_modules
-backend/package.json
