--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ backend/environment.json
 frontend/src/assets/iptable.json
 backend/public
 backend/node_modules
-frontend/node_modules
+frontend/node_module
+frontend/package.json
+backend/package.json
