--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off",
+      "no-console":"off"
+    }
   },
   "browserslist": [
     "> 1%",
