db refactoring && jwt implementation

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-backend/environment.json
+backend/config/
+backend/models/
+backend/seeders
+backend/migrations
 frontend/src/assets/iptable.json
-backend/public
 backend/node_modules
 backend/uploads
 frontend/node_module
