--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,17 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "^1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "pug": "2.0.0-beta11",
