--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,4 @@ backend/migrations
 frontend/src/assets/iptable.json
 backend/node_modules
 backend/uploads
-frontend/node_module
-frontend/package.json
-backend/package.json
+frontend/node_modules
