--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node --unhandled-rejections=strict ./bin/www",
+    "dev": "nodemon --exec node --unhandled-rejections=strict ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
