--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vue-simple-alert": "^1.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -38,7 +39,7 @@
     },
     "rules": {
       "no-unused-vars": "off",
-      "no-console":"off"
+      "no-console": "off"
     }
   },
   "browserslist": [
