--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon --exec node ./bin/www"
+    "backend": "nodemon --exec node ./bin/www",
+    "dev": "concurrently \"npm run backend\" \"cd ../frontend && npm run serve\" "
   },
   "dependencies": {
+    "concurrently": "^5.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "http-errors": "^1.6.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
